# text-based-chess

./: README.md
Chess/: CMakeLists.txt  chess-notes.txt
Chess/src/: Board.cpp  Board.h  CMakeLists.txt  Enums.h  Game.cpp  Game.h  Helpers.cpp  Helpers.h  Move.cpp  Move.h  Player.cpp  Player.h  Square.cpp  Square.h  main.cpp
Chess/src/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
